tests/query_errors/scope_window_script2/error.txt
Error: 
    7 |   signed::max
      |   ^^^^^^^^^^^ The constant signed::max (absolute path) is not defined.